

syntax = "proto3";

option java_multiple_files = true;
package com.ally.proto;

message GetRequest {
    bytes key = 1;
}

message GetResponse {
    bytes value = 1;
    string responseStatus = 2;
}

message PutRequest {
    bytes key = 1;
    bytes value = 2;
}


message PutResponse {
    string responseStatus = 1;
}


service AllyService {
    rpc get (GetRequest) returns (GetResponse);
    rpc put (PutRequest) returns (PutResponse);
}